Dirty but working code for 300bpm met

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>metronome</title>
 </head>
 <body>
-    <div id="entry"></div>
+    <button id="start">Start</button>
+    <button id="stop">Stop</button>
 </body>
 </html>
