Added very basic input box for variable bpm

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>metronome</title>
 </head>
 <body>
+    <label for="bpm">BPM:</label>
+    <input id="bpm" type="number" value="120">
     <button id="start">Start</button>
     <button id="stop">Stop</button>
 </body>
