Ability to make notes per variable

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 </head>
 <body>
     <label for="bpm">BPM:</label>
-    <input id="bpm" type="number" value="120">
-    <button id="start">Start</button>
+    <input id="bpm" type="number" value="120"><br />
+
+    <label for="notes">Notes Per Bar:</label>
+    <input id="notes" type="number" value="4"><br />
+
+    <button id="start">Start</button><br />
     <button id="stop">Stop</button>
 </body>
 </html>
