Added ability to set a percentage of the current tempo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <label for="notes">Notes Per Bar:</label>
     <input id="notes" type="number" value="4"><br />
 
+    <label for="tempoPercentage">Tempo Percentage:</label>
+    <input id="tempoPercentage" type="number" value="100" min="25" max="200"><br/>
+
     <button id="start">Start</button><br />
     <button id="stop">Stop</button>
 </body>
