Added basic visualization of beats

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
 
     <button id="start">Start</button><br />
     <button id="stop">Stop</button>
+
+    <div id="indicators"></div>
 </body>
 </html>
